fixed top nav bar z-index

--- a/test/src/scss/landing.scss
+++ b/test/src/scss/landing.scss
@@ -92,7 +92,7 @@ html {
     min-width: 100vw;
     position: relative;
     text-align: center;
-    z-index: 2;
+    z-index: 101;
 }
 
 .s1::before {
