--- a/test/src/scss/universal.scss
+++ b/test/src/scss/universal.scss
@@ -227,7 +227,7 @@ a {
     width: 100vw;
     height: 3rem;
     background: linear-gradient(0deg, rgba(15, 22, 24, 0) 0%, rgba(15, 22, 24, 1) 100%);
-    z-index: 101;
+    z-index: 100;
 }
 
 
